Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@ I enjoy converting ideas into real-world projects and continuously improving my 
         <div class="card project-card shadow-sm" data-bs-toggle="modal" data-bs-target="#project3Modal">
           <img src="" class="card-img-top" alt="Project 3">
           <div class="card-body">
-            <h5 class="card-title">web site</h5>
-            <p class="card-text">basic web site using react.</p>
+            <h5 class="card-title">Form</h5>
+            <p class="card-text">basic html Registration form with CRUD operations.</p>
           </div>
         </div>
       </div>
@@ -274,19 +274,19 @@ I enjoy converting ideas into real-world projects and continuously improving my 
     </div>
   </div>
 </div>
-<!-- Project Modals (Example for Project 2) -->
+<!-- Project Modals (Example for Project 3) -->
 <div class="modal fade" id="project3Modal" tabindex="-2">
   <div class="modal-dialog modal-lg modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">web site</h5>
+        <h5 class="modal-title">Form</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body">
         <img src="" class="img-fluid mb-3" alt="Project 2">
-        <p>basic web site using react</p>
-        <a href="" target="_blank" class="btn btn-primary me-2">GitHub</a>
-        <a href="" target="_blank" class="btn btn-success">Live Demo</a>
+        <p>Registration Form with CRUD operations.</p>
+        <a hrefhttps://github.com/23CABVIJAYADHARSHINIK/form" target="_blank" class="btn btn-primary me-2">GitHub</a>
+        <a href="https://23cabvijayadharshinik.github.io/form/" target="_blank" class="btn btn-success">Live Demo</a>
       </div>
     </div>
   </div>
@@ -304,3 +304,4 @@ I enjoy converting ideas into real-world projects and continuously improving my 
 <script src="./js/script.js"></script>
 </body>
 </html>
+
