--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ I enjoy converting ideas into real-world projects and continuously improving my 
       <!-- Project 3 -->
       <div class="col-md-4">
         <div class="card project-card shadow-sm" data-bs-toggle="modal" data-bs-target="#project3Modal">
-          <img src="" class="card-img-top" alt="Project 3">
+          <img src="./images/form.png" class="card-img-top" alt="Project 3">
           <div class="card-body">
             <h5 class="card-title">Form</h5>
             <p class="card-text">basic html Registration form with CRUD operations.</p>
@@ -283,7 +283,7 @@ I enjoy converting ideas into real-world projects and continuously improving my 
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body">
-        <img src="" class="img-fluid mb-3" alt="Project 2">
+        <img src="./images/form.png" class="img-fluid mb-3" alt="Project 2">
         <p>Registration Form with CRUD operations.</p>
         <a hrefhttps://github.com/23CABVIJAYADHARSHINIK/form" target="_blank" class="btn btn-primary me-2">GitHub</a>
         <a href="https://23cabvijayadharshinik.github.io/form/" target="_blank" class="btn btn-success">Live Demo</a>
@@ -304,4 +304,5 @@ I enjoy converting ideas into real-world projects and continuously improving my 
 <script src="./js/script.js"></script>
 </body>
 </html>
+
 
