--- a/index.html
+++ b/index.html
@@ -162,18 +162,18 @@ I enjoy converting ideas into real-world projects and continuously improving my 
     <div class="row g-4 text-center">
       <div class="col-md-4">
         <i class="bi bi-award fs-1 text-primary"></i>
-        <h5 class="mt-2">Full Stack Web Dev</h5>
-        <p>Coursera, 2024</p>
+        <h5 class="mt-2">JavaScript for beginners by Traversy Media</h5>
+        <p>cursa, 2025</p>
       </div>
       <div class="col-md-4">
         <i class="bi bi-award fs-1 text-success"></i>
-        <h5 class="mt-2">Java Programming</h5>
-        <p>Udemy, 2023</p>
+        <h5 class="mt-2">Python for beginners</h5>
+        <p>Simplilearn, 2024</p>
       </div>
       <div class="col-md-4">
         <i class="bi bi-award fs-1 text-warning"></i>
-        <h5 class="mt-2">React Development</h5>
-        <p>freeCodeCamp, 2024</p>
+        <h5 class="mt-2">Introduction to HTML</h5>
+        <p>Simplilearn, 2023</p>
       </div>
     </div>
   </div>
@@ -304,5 +304,6 @@ I enjoy converting ideas into real-world projects and continuously improving my 
 <script src="./js/script.js"></script>
 </body>
 </html>
+
 
 
