Fix HTML formatting issues and update resume link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="col-md-6 text-center text-md-start">
         <h1>Hello, I’m Vijayadharshini</h1>
         <p class="lead">Full Stack Developer | JavaScript | React </p>
-        <a href="Vijayadharshini_Resume.pdf" download class="btn btn-light btn-lg me-2">Download Resume</a>
+        <a href="VIJAYADHARSHINI_KRISHNASAMY.pdf" download class="btn btn-light btn-lg me-2">Download Resume</a>
         <a href="#projects" class="btn btn-outline-light btn-lg">View Projects</a>
       </div>
       <div class="col-md-6 text-center mt-4 mt-md-0">
@@ -304,6 +304,7 @@ I enjoy converting ideas into real-world projects and continuously improving my 
 <script src="./js/script.js"></script>
 </body>
 </html>
+
 
 
 
