Fix HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a href="#projects" class="btn btn-outline-light btn-lg">View Projects</a>
       </div>
       <div class="col-md-6 text-center mt-4 mt-md-0">
-        <img src="./images/IMG_20251215_203443.jpg" alt="Vijayadharshini" class="circular-img shadow">
+        <img src="./images/mypic.jpeg" alt="Vijayadharshini" class="circular-img shadow">
       </div>
     </div>
   </div>
@@ -304,6 +304,7 @@ I enjoy converting ideas into real-world projects and continuously improving my 
 <script src="./js/script.js"></script>
 </body>
 </html>
+
 
 
 
